# NemefistoAPP

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE.md
scripts/: build-helper.mjs  prepare-bundle.mjs
src/: App.css  App.tsx  FloatingApp.css  FloatingApp.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: xray-config.json
src-tauri/src/: lib.rs
src-tauri/src/config/: geofiles.rs  hwid.rs  mihomo_config.rs  mod.rs  routing_profile.rs  routing_store.rs  server.rs  sing_box_config.rs  subscription.rs  xray_config.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/platform/: autostart.rs  bandwidth.rs  crash_dumps.rs  helper_bootstrap.rs  helper_client.rs  mod.rs  network.rs  network_watcher.rs  process_memory.rs  processes.rs  proxy.rs  secure_storage.rs  session_lock.rs  tray.rs
src-tauri/src/vpn/: connection_ping.rs  leak_test.rs  mihomo.rs  mihomo_api.rs  mod.rs  ping.rs  ports.rs  sing_box.rs  xray.rs
src/components/: AnnounceBanner.tsx  BackupPreviewModal.tsx  BandwidthMeter.tsx  CrashRecoveryDialog.tsx  Footer.tsx  Header.tsx  MihomoGroupsInline.tsx  ModeSegment.tsx  OnboardingTour.tsx  PingBadge.tsx  PowerStack.tsx  ProxiesPanel.tsx  RoutingProfilesPanel.tsx  ServerPreviewModal.tsx  ServerSelector.tsx  SettingsPage.tsx  SubscriptionMeta.tsx  Toaster.tsx  Toggle.tsx  UpdateModal.tsx  Welcome.tsx  icons.tsx
src/components/effects/: BackgroundLayers.tsx  CustomCursor.tsx  Scene3D.tsx  WideAmbient.tsx
src/lib/: backup.ts  constants.ts  deepLinks.ts  leakTest.ts  nativeNotify.ts  openExternal.ts  updater.ts
src/lib/hooks/: useApplyTheme.ts  useAutoUpdateCheck.ts  useEffectiveSettings.ts  useGlobalShortcuts.ts  useMediaQuery.ts  useNativeStatusNotify.ts  useSystemTheme.ts  useTrustedWifi.ts  useUtcClock.ts
src/locales/en/: translation.json
src/locales/ru/: translation.json
src/stores/: exampleStore.ts  runtimeStore.ts  settingsStore.ts  subscriptionStore.ts  toastStore.ts  updateStore.ts  vpnStore.ts
