[package]
name = "vpn-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vpn-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vpn_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
serde_yaml = "0.9.34"
base64 = "0.22.1"
uuid = { version = "1.23.1", features = ["v4"] }
anyhow = "1.0.102"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset"] }
tokio = { version = "1", features = ["net", "time", "rt", "io-util", "macros", "sync", "process"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Console",
] }

# Helper-сервис как отдельный исполняемый файл. Запускается с правами SYSTEM
# через Windows Service Control Manager и слушает named pipe для команд от
# user-mode Tauri-приложения (управление TUN-интерфейсом и routing).
[[bin]]
name = "nemefisto-helper"
path = "src/bin/nemefisto_helper.rs"

