[package]
name = "vpn-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vpn-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vpn_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
serde_yaml = "0.9.34"
base64 = "0.22.1"
uuid = { version = "1.23.1", features = ["v4"] }
anyhow = "1.0.102"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "socks", "json"] }
tokio = { version = "1", features = ["net", "time", "rt", "io-util", "macros", "sync", "process"] }
futures = "0.3"
# 14.F: zip-архив для export_diagnostics (диагностический пакет для саппорта).
# Без compression-features чтобы не тянуть лишние зависимости — в zip кладём
# уже мелкие текстовые файлы (логи + JSON), сжатие deflate не критично.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# 11.B: sha256 для verify-after-download geofiles. Только integrity-check,
# не security-critical — но через крейт компактнее чем велосипед.
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-service = "0.7"
# Защищённое хранилище для секретов (URL подписки, HWID-override).
# Использует Windows Credential Manager через keyring-rs (этап 6.A).
keyring = "3"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    # 13.D: WFP API (FwpmEngineOpen0, FwpmFilterAdd0, FWPM_LAYER_*).
    # Используется только в helper'е — но features в windows-sys
    # глобальные на крейт, поэтому объявляем здесь.
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_System_Console",
    # 9.B: EnumProcesses + K32GetModuleBaseNameW для детекта запущенных
    # сторонних VPN-клиентов (без admin, PROCESS_QUERY_LIMITED_INFORMATION).
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Rpc",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Helper-сервис как отдельный исполняемый файл. Запускается с правами SYSTEM
# через Windows Service Control Manager и слушает named pipe для команд от
# user-mode Tauri-приложения (управление TUN-интерфейсом и routing).
[[bin]]
name = "nemefisto-helper"
path = "src/bin/nemefisto_helper.rs"

# 14.C: line-tables только в release-сборке. Backtrace в crash-dump'ах
# содержит читаемые file:line, а размер бинарника растёт минимально
# (~1-3 МБ против 30 МБ для полных debug-symbols). Compromise: достаточно
# для прод-диагностики, не раздувает installer.
[profile.release]
debug = "line-tables-only"

